@@ -2,6 +2,13 @@
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  28 Oct 2004; Mike Frysinger <vapier@gentoo.org>:
+
+    Revert pam_console_apply udev check in bootmisc/halt.sh since 
+    the bug is with pam_console_apply and not udev/pam.
+
+    Use ${EUID} instead of $(id -u) to help out BSD in runscript.sh
+
   26 Oct 2004; Mike Frysinger <vapier@gentoo.org>:
 
     Don't use -A with fsck to respect the fs_passno since it'll try 
